--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.14.1",
     "pg": "^8.2.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
