--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "node-sass": "^4.14.1",
+    "node-schedule": "^1.3.2",
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
